@@ -1,3 +1,8 @@
+2015-06-19 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_hppa-cpu.c, lib/jit_hppa-fpu.c, lib/jit_hppa.c:
+	Add base support to jit vararg functions to the hppa backend.
+
 2015-06-10 Paulo Andrade <pcpa@gnu.org>
 
 	* lib/jit_ia64-cpu.c, lib/jit_ia64-fpu.c, lib/jit_ia64.c:
